--- a/index.html
+++ b/index.html
@@ -524,15 +524,14 @@
     <section id="contact" class="contact fade-in">
         <h2 class="section-title">お問い合わせ</h2>
         <div class="contact-form">
-            <p>お問い合わせフォームは準備中です</p>
-            <!-- Google Form埋め込み用のプレースホルダー -->
-            <!-- <iframe src="YOUR_GOOGLE_FORM_URL" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe> -->
+            <iframe src="https://forms.gle/jmstdrJyXvEEGdgS9" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
         </div>
     </section>
 
     <!-- フッター -->
     <footer>
         <p>&copy; 2024 Enseek Inc. All rights reserved.</p>
+        <p><a href="/privacy-policy.html" style="color: var(--white); opacity: 0.8; text-decoration: none;">プライバシーポリシー</a></p>
     </footer>
 
     <script>
