--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
     <section id="contact" class="contact fade-in">
         <h2 class="section-title">お問い合わせ</h2>
         <div class="contact-form">
-            <iframe src="https://forms.gle/jmstdrJyXvEEGdgS9" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd8UuJfWktLdTICgZNLdMAM4Mt8vB_JTn1Lo_ygtDqcyIv3IQ/viewform?usp=sharing&ouid=103244117341563392196" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
         </div>
     </section>
 
