--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
         <div class="philosophy-grid">
             <div class="philosophy-item">
                 <h3>Mission</h3>
-                <p>Define a Novel Experience for Developers.<br>新しい開発者体験を定義する</p>
+                <p>Design a Novel Experience for Developers.<br>新しい開発者体験をデザインする</p>
             </div>
             <div class="philosophy-item">
                 <h3>Vision</h3>
