--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
                 <a href="#values">バリュー</a>
                 <a href="#products">プロダクト</a>
                 <a href="#contact">お問い合わせ</a>
-                <a href="#">プライバシーポリシー</a>
+                <a href="/privacy-policy.html">プライバシーポリシー</a>
             </div>
             <p class="copyright">&copy; 2024 Rerai Inc. All rights reserved.</p>
         </div>
