--- a/index.html
+++ b/index.html
@@ -835,8 +835,8 @@
     <main>
     <section class="hero">
         <div class="hero-content">
-            <h1>日常を、想いを紡ぐ舞台へ</h1>
-            <p>すべての人々の夢や想いが尊重され、変わらない日常が自らを表現する舞台となる世界を目指して、<br>Reraiは働く人々と寄り添いながら支援していきます。</p>
+            <h1>日常を、<br>想いを紡ぐ舞台へ</h1>
+            <p>人々の夢や想いが尊重され、変わらぬ日常が<br>自らを表現する舞台となる社会を目指し、<br>Reraiは働く人々と寄り添いながら支援していきます。</p>
         
             
             <a href="#contact" class="cta-button">お問い合わせ</a>
