--- a/index.html
+++ b/index.html
@@ -929,14 +929,13 @@
         <div class="footer-content">
             <div class="footer-logo">Rerai</div>
             <div class="footer-links">
-                <a href="#mission">ミッション</a>
                 <a href="#business">事業概要</a>
-                <a href="#values">バリュー</a>
+                <a href="#values">私たちの価値観</a>
                 <a href="#products">プロダクト</a>
                 <a href="#contact">お問い合わせ</a>
                 <a href="/privacy-policy.html">プライバシーポリシー</a>
             </div>
-            <p class="copyright">&copy; 2024 Rerai Inc. All rights reserved.</p>
+            <p class="copyright">&copy; 2025 Rerai Inc. All rights reserved.</p>
         </div>
     </footer>
     
