--- a/index.html
+++ b/index.html
@@ -902,10 +902,10 @@
     <section id="values" class="values">
         <h2 class="section-title">私たちの価値観</h2>
         <p>私たちは、アカデミアをバックグラウンドとする大学初のベンチャーです。スタートアップとして、弛まない努力とイノベーションを大切にしています。</p>
-        <p>私たちが大切にしているのは、『Rewrite the scene』という価値観です。</p>
+        <p>私たちが大切にしているのは、『Rewrite the Scene』という価値観です。</p>
         <div class="value-cards">
             <div class="value-card">
-                <h3>Rewrite the scene</h3>
+                <h3>Rewrite the Scene</h3>
                 <p>変化が激しく、その未来を予想できない世界を案じているだけでは、その先に広がる世界を描くこともままならない。困難な状況こそ、まずは自分が立ち上がり、状況を変えていく、そして未来を書き換えていく姿勢を大切にしよう。</p>
             </div>
         </div>
